# hired_dw

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: run-pipelines.yml  test-data-pipeline.yml  test-dbt-run.yml  test-provider.yml
fast_dw/: .user.yml  dbt_project.yml  profiles.yml
fast_dw/models/staging/: engagement_events.sql  ob_tactical_metrics.sql  schema.yml
src/: extract.py  main.py  salesforce.py  tasks.yml
src/etl/: __init__.py  extractors.py  loaders.py  transformers.py
src/etl/queries/: sfdc_account.sql  sfdc_account_history.sql  sfdc_campaign_history.sql  sfdc_contact.sql  sfdc_contact_history.sql  sfdc_lead.sql  sfdc_opportunity.sql  sfdc_opportunity_history.sql  sfdc_task.sql  sfdc_user.sql
src/etl/schemas/: sfdc_account.json  sfdc_account_history.json  sfdc_campaign_history.json  sfdc_contact.json  sfdc_contact_history.json  sfdc_lead.json  sfdc_opportunity.json  sfdc_opportunity_history.json  sfdc_task.json  sfdc_user.json
src/ingestions/: params.yml
src/pipelines/: salesforce.py  tasks.yml
src/registry/: __init__.py
tests/: load_test.py  test_tasks.yml
